// 定义语法类型，通常proto3好于proto2，proto2好于proto1，
// 如果不指定，默认使用proto2，必须位于第一行
syntax = "proto3";

// 定义作用域
package helloworld;

option java_package = "com.lgq.grpc.hello";
option java_outer_classname = "HelloWorldProto";
option java_multiple_files = true;
option objc_class_prefix = "HLW";

service Greeter {
  // 定义服务
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

message HelloRequest {
  // 定义消息体
  string name = 1;
}

message HelloReply {
  string message = 1;
}
